[package]
name = "barretenberg_wrapper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
clang_15_0 = []

[dependencies]
hex = "0.4.2"

[build-dependencies]
cmake = "0.1.49"
bindgen = "0.60.1"
num_cpus = "0.2"
